--- a/index.html
+++ b/index.html
@@ -11,22 +11,26 @@
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet"> 
 
   </head>
   <body>
 
-	<div class="container-fluid">
-		<div class="row">
-			<!-- Left blank space-->
-			<div class="col-md-3"></div>
-			<div class="col-md-6">
-				<!-- Contenu-->
-				
-			</div>
-			<!-- Right blank space-->
-			<div class="col-md-3"></div>
-		</div>
-	</div>
+    <div class="container-fluid">
+      <div class="row">
+        <!-- Left blank space-->
+        <div class="col-md-3"></div>
+        <div class="col-md-6">
+          <!-- Contenu-->
+          <h1 class="title">LA-METEO.CH</h1>
+          
+          <img class="img-responsive meteo-icon" src="resources/1.PNG">
+          <p class="location">Neuchâtel</p>
+        </div>
+        <!-- Right blank space-->
+        <div class="col-md-3"></div>
+      </div>
+    </div>
 
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
