--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/scripts.js"></script>
+    <script src="js/script.js"></script>
+    <script src="js/classes.js"></script>
   </body>
 </html>
