--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <h1 class="title">LA-METEO.CH</h1>
           
           <img class="img-responsive meteo-icon" src="resources/1.PNG">
-          <p class="location" data-toggle="tooltip" title="">Neuchâtel</p>
+          <p class="location" data-toggle="tooltip" title=""></p>
         </div>
         <!-- Right blank space-->
         <div class="col-md-3"></div>
