--- a/index.html
+++ b/index.html
@@ -26,16 +26,21 @@
           
           <img class="img-responsive meteo-icon" src="resources/1.PNG">
           <p class="location" data-toggle="tooltip" title=""></p>
+
+          <div class="weather-map" id="map"></div>
+          
         </div>
         <!-- Right blank space-->
         <div class="col-md-3"></div>
       </div>
     </div>
 
+    <script src="https://maps.googleapis.com/maps/api/js"></script>
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/script.js"></script>
     <script src="js/classes.js"></script>
     <script src="js/api.js"></script>
+
   </body>
 </html>
