Added a blank image when cannot locate

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <!-- Contenu-->
           <h1 class="title">LA-METEO.CH</h1>
           
-          <img class="img-responsive meteo-icon" src="resources/1.PNG">
+          <img class="img-responsive meteo-icon" src="resources/no-image.PNG">
           <p class="location" data-toggle="tooltip" data-placement="bottom" title=""></p>
 
           <div class="weather-map" id="map"></div>
