--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
           <img class="img-responsive meteo-icon" src="resources/no-image.PNG">
           <p class="location" data-toggle="tooltip" data-placement="bottom" title=""></p>
 
-          <div class="weather-map" id="map"></div>
+          <div class="map-wrapper">
+            <div class="weather-map" id="map"></div>
+          </div>
           
         </div>
         <!-- Right blank space-->
